Fixes activity box alignment on 768px

--- a/css/bootstrap.css
+++ b/css/bootstrap.css
@@ -6802,6 +6802,9 @@ footer a:hover {
     .navbar-nav {
         margin-top: -8px;
     }
+    .activity-box {
+        min-height: 264px
+    }
 }
 @media (max-width: 400px) {
     .activity-box h1 {
